2002-01-27  Clint Adams  <clint@zsh.org>

	* 16500: Completion/Zsh/Type/_command_names:
	don't complete executable files in the current directory
	if "." is not in path.

2002-01-23  Bart Schaefer  <schaefer@zsh.org>

	* 16435: Src/builtin.c: Fix core dump in `hash'.

	* 16419: Doc/Zsh/compsys.yo: Document some _arguments options
	in the syntax summary line.

2002-01-23  Peter Stephenson  <pws@csr.com>

	* 16489: Test/C01arith.ztst: default output for whole numbers
	as floats now has `.' at the end, c.f. 16423.

2002-01-22  Peter Stephenson  <pws@csr.com>

	* 16487: Src/glob.c: bug in 16486 when a qualifier in a set
	consisted only of flags which were handled globally.

	* 16486: Doc/Zsh/expn.yo, Src/glob.c, Src/pattern.c:  support
	(#q...) EXTENDED_GLOB syntax for qualifiers.  May be chained,
	ignored by pattern matching code.

2002-01-22  Sven Wischnowsky  <wischnow@zsh.org>

	* 16483: Completion/Base/Completer/_complete,
	Completion/Base/Core/_description,
	Completion/Base/Core/_main_complete,
	Completion/Base/Core/_message,
	Completion/Base/Utility/_alternative,
	Completion/Base/Utility/_arguments,
	Completion/Base/Utility/_values, Completion/Unix/Command/_chown,
	Doc/Zsh/compsys.yo, Src/Zle/comp.h, Src/Zle/compcore.c,
	Src/Zle/compctl.c, Src/Zle/complist.c, Src/Zle/compresult.c:
	add new generic fake style and changes to the C-code for that
	(different implementation of compadd -x)

2002-01-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 16472: Completion/Base/Completer/_complete,
	Completion/Base/Core/_normal, Completion/Base/Utility/_contexts,
	Completion/Unix/Command/_su, Doc/Zsh/compsys.yo: allow
	arguments to be given to functions used by compdef (actually,
	the strings are eval'uated, so this should be powerful enough)

2002-01-17  Oliver Kiddle  <opk@zsh.org>

	* 16464: Completion/Base/Widget/_complete_debug,
	Completion/Zsh/Command/_zstyle: use pager style in _complete_debug
	in preference to $EDITOR
